--- a/.github/workflows/fe_cd.yml
+++ b/.github/workflows/fe_cd.yml
@@ -22,8 +22,9 @@ jobs:
       - name: Build
         run: yarn build
 
+      # 현재 build된 폴더에 접근 후 s3 버킷에 build 파일 업로드
       - name: S3 Deploy
-        run: aws s3 sync ./build s3://[S3 버킷 이름]/ --acl bucket-owner-full-control # 현재 build된 폴더에 접근 후 s3 버킷에 build 파일 업로드
+        run: aws s3 sync ./build s3://${{ secrets.AWS_BUCKET_NAME }}/ --acl bucket-owner-full-control 
         env: 
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
