--- a/.github/workflows/fe_cd.yml
+++ b/.github/workflows/fe_cd.yml
@@ -1,37 +1,45 @@
-name: CD
-
+name: Deploy Alpha-FE to S3
 
 on:
   push:
-    branches: [ main ]
-    
-env:
-  CI: false
+    branches:
+      - main
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout source code
-        uses: actions/checkout@v2 # workflow에서 액세스할 수 있도록 저장소를 체크아웃
-        
-      - name: Install dependencies
-        run: yarn install
-        
-      - name: Build
-        run: yarn build
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-      # 현재 build된 폴더에 접근 후 s3 버킷에 build 파일 업로드
-      - name: S3 Deploy
-        run: aws s3 sync ./build s3://totobon.store/ --acl bucket-owner-full-control 
-        env: 
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "18"
+
+      #- name: Create .env.production file
+        #run: |
+          #cd client
+          #echo 'REACT_APP_SERVER_URL=${{ secrets.REACT_APP_SERVER_URL }}' > .env.production
+
+      - name: Install dependencies
+        run: |
+          cd client
+          yarn install
+
+      - name: Build project
+        run: |
+          cd client
+          yarn run build
+
+      - name: Deploy to S3
+        uses: jakejarvis/s3-sync-action@v0.5.1
+        with:
+          args: --follow-symlinks --delete
+        env:
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET_NAME }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
-      - name: Invalidate CloudFront Cache # 새로 리소스를 업데이트할 때 기존 캐시 무효화
-        uses: chetan/invalidate-cloudfront-action@master
-        env:
-          AWS_DISTRIBUTION: ${{ secrets.AWS_DISTRIBUTION_ID }}
-          PATHS: '/index.html'
-        continue-on-error: true
+          SOURCE_DIR: client/build
