--- a/.github/workflows/fe_cd.yml
+++ b/.github/workflows/fe_cd.yml
@@ -17,23 +17,17 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 18 # 사용할 Node.js 버전
+      
+      - name: Create .env.production file
+        run: |
+          #cd lm_Fe
+          echo 'VITE_REACT_APP_URL=${{ secrets.VITE_REACT_APP_URL }}' > .env
 
       - name: Install dependencies
         run: yarn install # 또는 npm install, 프로젝트 종속성 설치 명령
 
       - name: Build project
         run: yarn build # 또는 npm run build, 프로젝트 빌드 명령
-
-      - name: Set Environment Variable for Backend Domain
-        run: |
-          echo "VITE_REACT_APP_URL=${{ secrets.VITE_REACT_APP_URL }}" >> $GITHUB_ENV
-        env:
-          VITE_REACT_APP_URL: ${{ secrets.VITE_REACT_APP_URL }}
-
-      - name: Create .env file
-        run: |
-          echo "VITE_REACT_APP_KAKAO_CLIENT_ID=${{ secrets.VITE_REACT_APP_KAKAO_CLIENT_ID }}" >> .env
-          echo "VITE_REACT_APP_KAKAO_REDIRECT_URI=${{ secrets.VITE_REACT_APP_KAKAO_REDIRECT_URI }}" >> .env
 
       - name: Deploy to S3
         uses: jakejarvis/s3-sync-action@v0.5.1
