--- a/package.json
+++ b/package.json
@@ -17,24 +17,36 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/i18next": "^13.0.0",
+    "@types/jwt-decode": "^3.1.0",
+    "@types/react-i18next": "^8.1.0",
     "axios": "^1.5.1",
     "font-awesome": "^4.7.0",
+    "i18next": "^23.6.0",
+    "image-compressor.js": "^1.1.4",
     "js-confetti": "^0.11.0",
     "jwt-decode": "^3.1.2",
     "lottie-web": "^5.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-i18next": "^13.3.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
+    "react-scroll-up": "^1.4.0",
     "react-toastify": "^9.1.3",
     "recoil": "^0.7.7",
-    "styled-components": "^6.1.0"
+    "recoil-persist": "^5.1.0",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
+    "styled-components": "^6.1.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/styled-components": "^5.1.28",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
